# japtrack

./: .gitignore  README.md  index.html  manifest.webmanifest  sw.js
.github/workflows/: release.yml
css/: components.css  layout.css  pages.css  variables.css
js/: app.js  charts.js  data.js  utils.js
js/pages/: accounts.js  budgets.js  dashboard.js  debt.js  forecast.js  goals.js  holidays.js  insights.js  networth.js  scheduled.js  settings.js  transactions.js
src-tauri/: .gitignore  Cargo.toml  copy-web.ps1  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
